src/evaluator/prefix/tests/snapshots/rust_monkey_interpreter__evaluator__prefix__tests__test_evaluator_minus_prefix_nodes_case1.snap
---
source: src/evaluator/prefix/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string())))"
---
{
  "INTEGER": {
    "value": -5
  }
}
